tests/ui/range/new_range_stability.stderr
error[E0658]: use of unstable library feature `new_range_remainder`
  --> $DIR/new_range_stability.rs:24:7
   |
LL |     i.remainder();
   |       ^^^^^^^^^
   |
   = note: see issue #154458 <https://github.com/rust-lang/rust/issues/154458> for more information
   = help: add `#![feature(new_range_remainder)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: use of unstable library feature `new_range_remainder`
  --> $DIR/new_range_stability.rs:45:7
   |
LL |     i.remainder();
   |       ^^^^^^^^^
   |
   = note: see issue #154458 <https://github.com/rust-lang/rust/issues/154458> for more information
   = help: add `#![feature(new_range_remainder)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: use of unstable library feature `new_range_remainder`
  --> $DIR/new_range_stability.rs:61:7
   |
LL |     i.remainder();
   |       ^^^^^^^^^
   |
   = note: see issue #154458 <https://github.com/rust-lang/rust/issues/154458> for more information
   = help: add `#![feature(new_range_remainder)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0658`.
